# mmpw

./: .gitignore  Cargo.toml  build_web.sh  docs  index.html
benches/: validate.rs
docs/: index.html  mmpw_web.js  mmpw_web_bg.wasm
mmpw-cli/: Cargo.toml
mmpw-cli/src/: main.rs
mmpw-encode/: Cargo.toml
mmpw-encode/src/: main.rs
mmpw-gen/: Cargo.toml
mmpw-gen/src/: data.rs  lib.rs  main.rs  names.inc.rs  words.inc.rs
mmpw-validate/: Cargo.toml
mmpw-validate/benches/: validate.rs
mmpw-validate/src/: array_byte_vec.rs  binstring.rs  lib.rs
mmpw-web/: Cargo.toml  index.html
mmpw-web/docs/: index.html  mmpw_web.js
mmpw-web/src/: app.rs  lib.rs  main.rs  words.txt
pkg/: mmpw_web.d.ts  mmpw_web.js  mmpw_web_bg.wasm  mmpw_web_bg.wasm.d.ts  package.json
src/: array_byte_vec.rs  binstring.rs  lib.rs  main.rs  words.inc.rs
