[package]
name = "mmpw"
version = "0.1.0"
authors = ["crumblingstatue <radiantstatue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
structopt = "0.3.19"

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "validate"
harness = false
