[package]
name = "mmpw-cli"
version = "0.1.0"
authors = ["crumblingstatue <radiantstatue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
mmpw-gen = { path = "../mmpw-gen" }
mmpw_validate = { path = "../mmpw-validate" }
