[package]
name = "mmpw-encode"
version = "0.1.0"
authors = ["crumblingstatue <radiantstatue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mmpw_validate]
path = "../mmpw-validate"

[dependencies]
fltk = "1.0.0"
