[package]
name = "mmpw-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.14.0"

[dependencies.mmpw-gen]
path = "../mmpw-gen"

[dependencies.mmpw_validate]
path = "../mmpw-validate"

[dependencies.getrandom]
version = "*"
features = ["js"]
